cmake_minimum_required(VERSION 3.17)
project(CuptiBug CXX CUDA)  # use g++ to build .cpp files
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_VERBOSE_MAKEFILE ON)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)
find_package(CUDAToolkit 11)
set(CMAKE_CUDA_STANDARD 14)
if (NOT DEFINED CMAKE_CUDA_ARCHITECTURES)
  set(CMAKE_CUDA_ARCHITECTURES 70 75 80)
endif()
if(NOT DEFINED CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE RelWithDebInfo)
endif()
add_compile_options(-Wall -pedantic $<$<NOT:$<COMPILE_LANGUAGE:CUDA>>:-Werror> )
add_subdirectory(pybind11)
find_package(Threads REQUIRED)
add_library(cuptiCapture cuptiCapture.cxx)
target_link_libraries(cuptiCapture PRIVATE CUDA::cupti_static rt)
pybind11_add_module(cupti_bug MODULE cuptiBug.cxx)
target_link_libraries(cupti_bug PRIVATE cuptiCapture)
